fix legend overflow scroll

--- a/HeatMap/heatMap.css
+++ b/HeatMap/heatMap.css
@@ -28,9 +28,6 @@ div.tooltip {
 	pointer-events: none;	
 }
 #legend {
-  display: flex;
-  flex-direction: column;
-	align-items: center;
 	padding: 1 1.5rem 1.5rem;
 }
 #legend svg {
